# EquiBench

./: .gitignore  README.md  prompts.yaml  pyproject.toml  step1_data.py  step1_datasets.py  step2_eval.py
llm/: __init__.py  generate.py  judge.py  utils.py
steps/: __init__.py
steps/data/: __init__.py  type.py
steps/datasets/: __init__.py
steps/eval/: __init__.py  eval.py  type.py
steps/organize/: __init__.py  organize.py  type.py
steps/similarity/: __init__.py  similarity.py  type.py
steps/stat/: __init__.py  type.py
type/: __init__.py  category.py  names.py  problem_pair.py  prompt.py  prompt_type.py
utils/: __init__.py  utils.py
